# ofxGe

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  addons.make  build_lygia_plugin.sh  config.make
notes/: 2025-09-05-2108_comprehensive_technical_documentation.md  2025-09-05-2108_종합_기술_문서.md  20250726-173338-개발진행상황.md  20250803-132728-development-progress.md  20250803-214749-development-progress-evening-korean.md  20250803-214901-development-progress-evening-english.md  20250805-105226-개발진행상황-문제분석.md  20250816-172239-expression-parser-integration.md  20250816-213911-advanced-expression-system-implementation.md  20250817-020935-global-output-node-and-nested-functions-implementation.md  20250819-205136-shader-live-coding-environment-blueprint.md  20250819-211440-cli-shader-script-interpreter-design.md  20250819-215520-SuperCollider-Style-Live-Coding-Interpreter-Proposal.md  20250819-223755-OSC-shader-optimization-analysis.md  20250819-225304-pingpong-fbo-blur-implementation.md  20250819-230844-osc-shader-node-tree-query-system.md  20250819-231350-live-coding-node-tree-visualization-system.md  202509052117_cross_platform_plugin_migration_report.md  development-progress-2025-07-26.md  development-progress-2025-08-03-korean.md  개발진행상황-2025-08-04.md
src/: geMain.cpp  geMain.h  main.cpp  ofApp.cpp  ofApp.h
src/oscHandler/: oscHandler.cpp  oscHandler.h
src/platformUtils/: DynamicLoader.cpp  DynamicLoader.h  PlatformUtils.cpp  PlatformUtils.h
src/plugin-system/: PluginManager.cpp  PluginManager.h
src/pluginSystem/: PluginManager.cpp  PluginManager.h
(+18 files in other folders)
